munin (2.0.33-2) UNRELEASED; urgency=medium

  * Bump Standards-Version to 4.1.1, no changes needed.
  * Bump debian/compat to 10 and build-depend on debhelper >= 10.2.5~.
  * Drop version from suggestion on smartmontools, the suggested version is
    satisfied in oldoldstable even.
  * Drop unnecessary "Testsuite:autopkgtest" header from debian/control,
    thanks lintian.
  * Drop obsolete dependency on dh-systemd, nowadays taken care of by
    debhelper. 
  * Switch Vcs-Browser URL to https and use /git/ not /gitweb/ as well. 

 -- Holger Levsen <holger@debian.org>  Fri, 29 Sep 2017 18:26:34 +0200

munin (2.0.33-1) unstable; urgency=medium

  * New upstream release. (Closes: #856536) 

 -- Holger Levsen <holger@debian.org>  Fri, 03 Mar 2017 23:44:55 +0100

munin (2.0.32-1) unstable; urgency=medium

  * New upstream release. (Closes: #856455)

 -- Holger Levsen <holger@debian.org>  Wed, 01 Mar 2017 22:30:35 +0100

munin (2.0.31-1) unstable; urgency=medium

  * New upstream release, fixing CVE-2017-6188. (Closes: #855705)

 -- Holger Levsen <holger@debian.org>  Sat, 25 Feb 2017 23:24:27 +0100

munin (2.0.30-1) unstable; urgency=medium

  * New upstream release.

 -- Holger Levsen <holger@debian.org>  Sat, 21 Jan 2017 12:58:51 +0100

munin (2.0.29-1) unstable; urgency=medium

  * New upstream version. (Closes: #847649, #849383)
  * Replace dependency on ttf-dejavu | fonts-dejavu with a dependency on
    fonts-dejavu-core.

 -- Holger Levsen <holger@debian.org>  Mon, 02 Jan 2017 13:20:29 +0100

munin (2.0.28-1) unstable; urgency=medium

  * New upstream version. (Closes: #846391, #598554), see upstream ChangeLog
    for details.

 -- Holger Levsen <holger@debian.org>  Tue, 06 Dec 2016 13:15:50 +0100

munin (2.0.27-1) unstable; urgency=medium

  * New upstream version, (Closes: #767032, #768553, #825136, #834194), see
    upstream ChangeLog for details.

 -- Holger Levsen <holger@debian.org>  Mon, 31 Oct 2016 21:59:54 +0100

munin (2.0.26-4) unstable; urgency=medium
